update endpoint swagger
